authentication/authorization-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authorization-forward-auth
  namespace: authentication
spec:
  forwardAuth:
    address: http://authelia-service.authentication.svc.cluster.local:9091/api/verify?rd=https://login.anagno.me
    trustForwardHeader: true
    authResponseHeaders: 
      - "X-Auth-User"
      - "X-Auth-Header" 
      - "X-Forwarded-User"
      - "Remote-User"
      - "Remote-Groups"
      - "Remote-Name"
      - "Remote-Email"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authorization-headers
  namespace: authentication
spec:
  headers:
    browserXssFilter: true
    customFrameOptionsValue: "SAMEORIGIN"
    customResponseHeaders:
      Cache-Control: "no-store"
      Pragma: "no-cache"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authorization
  namespace: authentication
spec:
  chain:
    middlewares:
      - name: authorization-headers
        namespace: authentication
      - name: authorization-forward-auth
        namespace: authentication
