authentication/authelia-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-redis
  namespace: authentication  
  labels:
    app: authelia-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia-redis
  template:
    metadata:
      labels:
        app: authelia-redis
    spec:
      containers:
        - name: redis
          image: redis:6.2.6-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-redis-service
  namespace: authentication  
  labels:
    app: authelia-redis
spec:
  selector:
    app: authelia-redis
  ports:
  - protocol: TCP
    port: 6379
