authentication/authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authentication
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      # https://github.com/authelia/authelia/blob/5b3fa1fffb82cf7a5f4ba11ce151e16b929a6e34/docs/configuration/index.md#environment
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia/authelia:4.33.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
          volumeMounts:
          - name: config
            mountPath: /config
            readOnly: true
          - name: authelia-secrets
            mountPath: /app/authelia-secrets
            readOnly: true
          - name: ldap-secrets
            mountPath: /app/ldap-secrets
            readOnly: true
          - name: mariadb-secrets
            mountPath: /app/mariadb-secrets
            readOnly: true
          - name: mail-secrets
            mountPath: /app/mail-secrets
            readOnly: true
          command: ["authelia"]
          args:
          - --config=/config/configuration.yaml              
      volumes:
        - name: config
          configMap:
            name: authelia
            items:
              - key: configuration.yaml
                path: configuration.yaml
                
        - name: authelia-secrets
          secret:
            secretName: authelia
            items:
              - key: jwt-secret
                path: jwt
              - key: session
                path: session
              - key: encryption-key
                path: encryption
        - name: ldap-secrets
          secret:
            secretName: openldap-admin
            items:
              - key: admin-password
                path: ldap_password
        - name: mariadb-secrets
          secret:
            secretName: authelia-mariadb
            items:
              - key: authelia-password
                path: sql_password
        - name: mail-secrets
          secret:
            secretName: no-reply-mail
            items:
              - key: password
                path: mail_password
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authentication
spec:
  selector:
    app: authelia
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
 
# Resources:
# https://stackoverflow.com/questions/13160514/how-to-find-all-the-ldap-groups-that-a-user-is-part-of-when-groupofuniquenames
