authentication/ldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: authentication  
  labels:
    app: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: ldap
          image: osixia/openldap-backup:1.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 389
              name: openldap
          #args: ["--loglevel", "debug"]
          volumeMounts:
            - name: ldap-backup
              mountPath: /data/backup
            - name: ldap-database
              mountPath: /var/lib/ldap
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
      volumes:
        - name: ldap-backup
          persistentVolumeClaim:
            claimName: openldap-backup
            readOnly: false
        - name: ldap-database
          persistentVolumeClaim:
            claimName: openldap-database
            readOnly: false
        - name: ldap-config
          persistentVolumeClaim:
            claimName: openldap-config
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-service
  namespace: authentication  
  labels:
    app: openldap
spec:
  selector:
    app: openldap
  ports:
  - protocol: TCP
    port: 389
    targetPort: 389
