authentication/smb-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-server
  namespace: authentication
  labels:
    app: samba-server
spec:
  selector:
    matchLabels:
      app: samba-server
  replicas: 1
  template:
    metadata:
      labels:
        app: samba-server
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: samba-server
        image: dperson/samba:latest
        imagePullPolicy: IfNotPresent
        args:
          # disable recycle bin
          - -r
          - -s
          - "data;/data;yes;yes;no;all;none;anagno"
          - -u
          - "anagno;anagno"
        ports:
          - name: netbios
            containerPort: 139
          - name: smb
            containerPort: 445
        volumeMounts:
          - mountPath: /data
            name: samba-storage
      volumes:
        - name: samba-storage
          persistentVolumeClaim:
            claimName: openldap-backup
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: samba-server-service
  namespace: authentication
  labels:
    app: samba-server-service
spec:
  ports:
  - name: netbios
    port: 139
    protocol: TCP
    targetPort: 139
  - name: smb
    port: 445
    protocol: TCP
    targetPort: 445
  selector:
    app: samba-server
  type: LoadBalancer
  loadBalancerIP: 192.168.179.236
