authentication/authelia-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: login.anagno.me
  namespace: authentication
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`login.anagno.me`)
      kind: Rule
      services:
        - name: authelia-service
          port: 9091
      middlewares:
      - name: https-redirect
        namespace: proxy
      - name: security-headers
        namespace: proxy
  tls:
    secretName: login-anagno-me-cert
    options:
      name: tls-security-headers
      namespace: proxy
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: login.anagno.me-http
  namespace: authentication
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`login.anagno.me`)
      kind: Rule
      services:
        - name: authelia-service
          port: 9091
      middlewares:
      - name: https-redirect
        namespace: proxy
