authentication/proxy-public.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxy.anagno.me
  namespace: proxy
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`proxy.anagno.me`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
      - name: https-redirect
        namespace: proxy
      - name: security-headers
        namespace: proxy
      - name: authorization
        namespace: authentication
  tls:
    secretName: proxy.anagno.me
    options:
      name: tls-security-headers
      namespace: proxy
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxy.anagno.me-http
  namespace: proxy
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`proxy.anagno.me`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
      - name: https-redirect
        namespace: proxy
