authentication/storage-public.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: storage.anagno.me
  namespace: longhorn-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`storage.anagno.me`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
      - name: https-redirect
        namespace: proxy
      - name: security-headers
        namespace: proxy
      - name: authorization
        namespace: authentication
  tls:
    secretName: storage.anagno.me
    options:
      name: tls-security-headers
      namespace: proxy
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: storage.anagno.me-http
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`storage.anagno.me`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
      - name: https-redirect
        namespace: proxy
